--- a/package.json
+++ b/package.json
@@ -166,6 +166,7 @@
     "blockstore-core": "^4.0.0",
     "fast-write-atomic": "^0.2.0",
     "interface-blockstore": "^5.0.0",
+    "interface-store": "^4.0.0",
     "it-glob": "^2.0.1",
     "it-map": "^2.0.1",
     "it-parallel-batch": "^2.0.1",
